# DCD-M1-Examen

./: .gitignore  README.md  base.csv  guia_reporte.md  pyproject.toml  reporte.ipynb  requirements.txt  ver.csv
data/: restaurantes.csv  usuarios.csv
examen/: __init__.py  analiticas.py  cargar_datos.py  modelado.py  perfil_datos.py  validar_datos.py
notebooks/: 00-exploración.ipynb  reporte.ipynb
src/examen/: cargar_datos.py  perfil_datos.py
src/examen_g33.egg-info/: PKG-INFO  SOURCES.txt
